# machine-learning

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yaml
advanced-learning-algorithms/module1/lab1-neuron-and-layers/: Cargo.toml
advanced-learning-algorithms/module1/lab1-neuron-and-layers/src/: data.rs  lib.rs  main.rs  model.rs  train.rs
advanced-learning-algorithms/module1/lab2-coffe-roasting/: Cargo.toml
advanced-learning-algorithms/module1/lab2-coffe-roasting/src/: lib.rs  main.rs
advanced-learning-algorithms/module1/lab3-coffe-roasting-simple/: Cargo.toml
advanced-learning-algorithms/module1/lab3-coffe-roasting-simple/src/: main.rs
advanced-learning-algorithms/module1/practice-w1-hdr/: Cargo.toml
advanced-learning-algorithms/module1/practice-w1-hdr/src/: lib.rs  main.rs
advanced-learning-algorithms/module2/lab1-relu/: Cargo.toml
advanced-learning-algorithms/module2/lab1-relu/src/: lib.rs  main.rs
advanced-learning-algorithms/module2/lab2-softmax/: Cargo.toml
advanced-learning-algorithms/module2/lab2-softmax/src/: lib.rs  main.rs
advanced-learning-algorithms/module2/lab3-multiclass/: Cargo.toml
advanced-learning-algorithms/module2/lab3-multiclass/src/: main.rs
advanced-learning-algorithms/module2/lab4-derivatives/: Cargo.toml
advanced-learning-algorithms/module2/lab4-derivatives/src/: main.rs
advanced-learning-algorithms/module2/lab5-backprop/: Cargo.toml
advanced-learning-algorithms/module2/lab5-backprop/src/: main.rs
advanced-learning-algorithms/module2/practice-w2-hdrm/: Cargo.toml
advanced-learning-algorithms/module2/practice-w2-hdrm/src/: main.rs
advanced-learning-algorithms/module3/lab1-model-evaluation/: Cargo.toml
advanced-learning-algorithms/module3/lab1-model-evaluation/src/: lib.rs  main.rs
advanced-learning-algorithms/module3/lab2-bias-and-variance/: Cargo.toml
advanced-learning-algorithms/module3/lab2-bias-and-variance/src/: lib.rs  main.rs
advanced-learning-algorithms/module3/practice-w3-afaml/: Cargo.toml
advanced-learning-algorithms/module3/practice-w3-afaml/src/: lib.rs  main.rs
advanced-learning-algorithms/module4/lab1-decision-tree/: Cargo.toml
advanced-learning-algorithms/module4/lab1-decision-tree/src/: lib.rs  main.rs
advanced-learning-algorithms/module4/lab2-tree-ensemble/: Cargo.toml
advanced-learning-algorithms/module4/lab2-tree-ensemble/src/: lib.rs  main.rs
advanced-learning-algorithms/module4/practice-w4-decision-tree/: Cargo.toml
advanced-learning-algorithms/module4/practice-w4-decision-tree/src/: main.rs
supervised-learning/module1/l1-intro/: Cargo.toml
supervised-learning/module1/l1-intro/src/: main.rs
supervised-learning/module1/lab2-model-representation/: Cargo.toml
supervised-learning/module1/lab2-model-representation/src/: main.rs
supervised-learning/module1/lab3-cost-function/: Cargo.toml
supervised-learning/module1/lab3-cost-function/src/: lib.rs  main.rs
supervised-learning/module1/lab4-gradient-descent/: Cargo.toml
supervised-learning/module1/lab4-gradient-descent/src/: lib.rs  main.rs
supervised-learning/module2/lab1-vectorization/: Cargo.toml
supervised-learning/module2/lab1-vectorization/src/: main.rs
supervised-learning/module2/lab2-mvlr/: Cargo.toml
supervised-learning/module2/lab2-mvlr/src/: lib.rs  main.rs
supervised-learning/module2/lab3-fs-and-lr/: Cargo.toml
supervised-learning/module2/lab3-fs-and-lr/src/: lib.rs  main.rs
supervised-learning/module2/lab4-fe-and-pr/: Cargo.toml
supervised-learning/module2/lab4-fe-and-pr/src/: lib.rs  main.rs
supervised-learning/module2/lab5-sklearn/: Cargo.toml
supervised-learning/module2/lab5-sklearn/src/: main.rs
supervised-learning/module2/practice-w2-linear-regression/: Cargo.toml
supervised-learning/module2/practice-w2-linear-regression/src/: main.rs
supervised-learning/module3/lab1-classification/: Cargo.toml
supervised-learning/module3/lab1-classification/src/: main.rs
supervised-learning/module3/lab2-sigmoid/: Cargo.toml
supervised-learning/module3/lab2-sigmoid/src/: lib.rs  main.rs
supervised-learning/module3/lab3-decision-boundary/: Cargo.toml
supervised-learning/module3/lab3-decision-boundary/src/: main.rs
supervised-learning/module3/lab4-logistic-loss/: Cargo.toml
supervised-learning/module3/lab4-logistic-loss/lab4-logistic-loss/: Cargo.toml
supervised-learning/module3/lab4-logistic-loss/src/: main.rs
supervised-learning/module3/lab5-cost-function/: Cargo.toml
supervised-learning/module3/lab5-cost-function/src/: main.rs
supervised-learning/module3/lab6-gradient-descent/: Cargo.toml
supervised-learning/module3/lab6-gradient-descent/src/: main.rs
supervised-learning/module3/lab7-linfa-logistic-regression/: Cargo.toml
supervised-learning/module3/lab7-linfa-logistic-regression/src/: main.rs
supervised-learning/module3/lab8-overfitting/: Cargo.toml
supervised-learning/module3/lab8-overfitting/src/: main.rs
supervised-learning/module3/lab9-regularization/: Cargo.toml
supervised-learning/module3/lab9-regularization/src/: lib.rs  main.rs
supervised-learning/module3/practice-w3-logistic-regression/: Cargo.toml
supervised-learning/module3/practice-w3-logistic-regression/src/: lib.rs  main.rs
unsupervised-learning/module1/lab1-k-means/: Cargo.toml
unsupervised-learning/module1/lab1-k-means/src/: lib.rs  main.rs
unsupervised-learning/module1/lab2-anomaly-detection/: Cargo.toml
unsupervised-learning/module1/lab2-anomaly-detection/src/: lib.rs  main.rs
unsupervised-learning/module2/lab1-cfrs/: Cargo.toml
unsupervised-learning/module2/lab1-cfrs/src/: lib.rs  main.rs
unsupervised-learning/module2/lab2-dl-for-cbf/: Cargo.toml
unsupervised-learning/module2/lab2-dl-for-cbf/src/: data.rs  lib.rs  main.rs  model.rs  train.rs
unsupervised-learning/module2/lab3-pca/: Cargo.toml
unsupervised-learning/module3/lab1-state-action-value-fn/: Cargo.toml
unsupervised-learning/module3/lab2-deep-q-learning-lunar-lander/: Cargo.toml
unsupervised-learning/module3/lab2-deep-q-learning-lunar-lander/src/: main.rs
(+3 files in other folders)
