[workspace]
members = [
    "supervised-learning/module1/l1-intro",
    "supervised-learning/module1/lab2-model-representation", 
    "supervised-learning/module1/lab3-cost-function",
    "supervised-learning/module1/lab4-gradient-descent",
    "supervised-learning/module2/lab1-vectorization",
    "supervised-learning/module2/lab2-mvlr",
    "supervised-learning/module2/lab3-fs-and-lr",
    "supervised-learning/module2/lab4-fe-and-pr",
    "supervised-learning/module2/lab5-sklearn",
    "supervised-learning/module3/lab1-classification"
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Gaurav Kumar <gauravsingh12341@gmail.com>"]
description = "Rust implementations of all labs for Andrew Ng's Coursera Machine Learning course."

[workspace.dependencies]
ndarray = "0.15.6"
