[workspace]
members = [
    "supervised-learning/module1/l1-intro",
    "supervised-learning/module1/lab2-model-representation", 
    "supervised-learning/module1/lab3-cost-function",
    "supervised-learning/module1/lab4-gradient-descent",
    "supervised-learning/module2/lab1-vectorization",
    "supervised-learning/module2/lab2-mvlr",
    "supervised-learning/module2/lab3-fs-and-lr",
    "supervised-learning/module2/lab4-fe-and-pr",
    "supervised-learning/module2/lab5-sklearn",
    "supervised-learning/module3/lab1-classification",
    "supervised-learning/module3/lab2-sigmoid",
    "supervised-learning/module3/lab3-decision-boundary",
    "supervised-learning/module3/lab4-logistic-loss",
    "supervised-learning/module3/lab5-cost-function",
    "supervised-learning/module3/lab6-gradient-descent", 
    "supervised-learning/module3/lab7-linfa-logistic-regression"
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Gaurav Kumar <gauravsingh12341@gmail.com>"]
description = "Rust implementations of all labs for Andrew Ng's Coursera Machine Learning course."

[workspace.dependencies]
ndarray = "0.15.6"
