[workspace]
members = [
    "advanced-learning-algorithms/module1/lab1-neuron-and-layers",
    "advanced-learning-algorithms/module1/lab2-coffe-roasting",
    "advanced-learning-algorithms/module1/lab3-coffe-roasting-simple",
    "advanced-learning-algorithms/module1/practice-w1-hdr",
    "advanced-learning-algorithms/module2/lab1-relu",
    "advanced-learning-algorithms/module2/lab2-softmax",
    "advanced-learning-algorithms/module2/lab3-multiclass",
    "advanced-learning-algorithms/module2/lab4-derivatives",
    "advanced-learning-algorithms/module2/lab5-backprop",
    "advanced-learning-algorithms/module2/practice-w2-hdrm",
    "advanced-learning-algorithms/module3/lab1-model-evaluation",
    "advanced-learning-algorithms/module3/lab2-bias-and-variance",
    "advanced-learning-algorithms/module3/practice-w3-afaml",
    "advanced-learning-algorithms/module4/lab1-decision-tree",
    "advanced-learning-algorithms/module4/lab2-tree-ensemble",
    "advanced-learning-algorithms/module4/practice-w4-decision-tree",
    "supervised-learning/module1/l1-intro",
    "supervised-learning/module1/lab2-model-representation",
    "supervised-learning/module1/lab3-cost-function",
    "supervised-learning/module1/lab4-gradient-descent",
    "supervised-learning/module2/lab1-vectorization",
    "supervised-learning/module2/lab2-mvlr",
    "supervised-learning/module2/lab3-fs-and-lr",
    "supervised-learning/module2/lab4-fe-and-pr",
    "supervised-learning/module2/lab5-sklearn",
    "supervised-learning/module2/practice-w2-linear-regression",
    "supervised-learning/module3/lab1-classification",
    "supervised-learning/module3/lab2-sigmoid",
    "supervised-learning/module3/lab3-decision-boundary",
    "supervised-learning/module3/lab4-logistic-loss",
    "supervised-learning/module3/lab5-cost-function",
    "supervised-learning/module3/lab6-gradient-descent",
    "supervised-learning/module3/lab7-linfa-logistic-regression",
    "supervised-learning/module3/lab8-overfitting",
    "supervised-learning/module3/lab9-regularization",
    "supervised-learning/module3/practice-w3-logistic-regression",
    "unsupervised-learning/module1/lab1-k-means",
    "unsupervised-learning/module1/lab2-anomaly-detection",
    "unsupervised-learning/module2/lab1-cfrs",
    "unsupervised-learning/module2/lab3-pca",
    "unsupervised-learning/module3/lab1-state-action-value-fn",
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Gaurav Kumar <gauravsingh12341@gmail.com>"]
description = "Rust implementations of all labs for Andrew Ng's Coursera Machine Learning course."

[workspace.dependencies]
burn = { version = "0.18.0", features = ["autodiff", "train"] }
burn-ndarray = "0.18"
ndarray = "0.15.6"
