[package]
name = "lab2-coffe-roasting"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
burn = { workspace = true }
burn-ndarray = { workspace = true }
lab1-neuron-and-layers = { path = "../lab1-neuron-and-layers" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"