[package]
name = "practice-w1-hdr"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
burn = { workspace = true }
burn-ndarray = { workspace = true }
lab1-neuron-and-layers = { path = "../lab1-neuron-and-layers" }
ndarray-npy = "0.8"
ndarray = { workspace = true }