[package]
name = "practice-w3-logistic-regression"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
csv = "*"
ndarray = { workspace = true }
lab2-sigmoid = { path = "../lab2-sigmoid" }
lab9-regularization = { path = "../lab9-regularization" }
