[package]
name = "lab2-dl-for-cbf"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
burn = { workspace = true }
burn-ndarray = { workspace = true }
lab1-neuron-and-layers = { path = "../../../advanced-learning-algorithms/module1/lab1-neuron-and-layers" }
csv = "1.3.1"
rand = "0.8"