[package]
name = "lab2-deep-q-learning-lunar-lander"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
burn = { workspace = true }
burn-ndarray = { workspace = true }
lab1-neuron-and-layers = { path = "../../../advanced-learning-algorithms/module1/lab1-neuron-and-layers" }
